--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,28 @@ body {
     text-wrap: balance;
   }
 }
+
+@font-face {
+  font-family: 'ggSans';
+  src: url('/fonts/gg-sans-Regular.ttf') format('truetype');
+  font-weight: normal;
+}
+@font-face {
+  font-family: 'ggSans';
+  src: url('/fonts/gg-sans-Medium.ttf') format('truetype');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'ggSans';
+  src: url('/fonts/gg-sans-Semibold.ttf') format('truetype');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'ggSans';
+  src: url('/fonts/gg-sans-Bold.ttf') format('truetype');
+  font-weight: 700;
+}
+
+
